@@ -223,6 +223,7 @@ enum job_states {
 					but sent SIGSTOP */
 #define JOB_RECONFIG_FAIL 0x00020000 /* Node configuration for job failed,
 					not job state, just job requeue flag */
+#define JOB_REVOKED       0x00040000 /* Sibling job revoked */
 
 
 #define READY_JOB_FATAL	   -2	/* fatal error */
