@@ -2623,6 +2623,8 @@ extern int jobacct_storage_p_job_complete(void *db_conn,
 		req.end_time    = job_ptr->end_time;
 		if (IS_JOB_REQUEUED(job_ptr))
 			req.job_state   = JOB_REQUEUE;
+		else if (IS_JOB_REVOKED(job_ptr))
+			req.job_state   = JOB_REVOKED;
 		else
 			req.job_state   = job_ptr->job_state & JOB_STATE_BASE;
 	}
