@@ -160,6 +160,8 @@ Added SELECT_NODEDATA_TRES_ALLOC_WEIGHTED to select_nodedata_type.
 Changed MEM_PER_CPU flag to 0x8000000000000000 from 0x80000000.
 Added SLURM_MSG_KEEP_BUFFER msg flag to instruct slurm_receive_msg() to save the
 	buffer ptr.
+Added JOB_REVOKED job state to indicate that federated job started on another
+	cluster.
 
 Added the following API's
 =========================
